tools/playbooks/argocd/virtualservice.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"argocd-vs","namespace":"argocd"},"spec":{"gateways":["istio-system/https-gateway"],"hosts":["argocd.code-triarii.com"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"argocd-server","port":{"number":80}}}]}]}}
    creationTimestamp: "2023-11-21T11:41:41Z"
    generation: 1
    labels:
      velero.io/backup-name: argocd-20231120150430
      velero.io/restore-name: argocd-20231120150430-20231121114104
    name: argocd-vs
    namespace: argocd
    resourceVersion: "3555898"
    uid: 5831865f-c702-4c16-828b-41cd2656937d
  spec:
    gateways:
    - istio-system/https-gateway
    hosts:
    - argocd.code-triarii.com
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: argocd-server
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
